Fixed spacing between nav links

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1 {
 
 #navbar ul li a {
 	text-decoration: none;
-	padding: 3px 3px 3px 3px;
+	padding-right: 20px;
 	color: black;
 }
 
@@ -113,7 +113,11 @@ h1 {
 	}
 
 	#navbar ul li {
-		font-size: 0.95em;
+		font-size: 0.9em;
+	}
+	
+	#navbar ul li a {
+		padding: 0 3px 0 3px;
 	}
 }
 
